# portfolioperformance

./: .gitignore  .python-version  README.md  SPSectors Rolling Table 3.ipynb  __init__.py  get_data.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-publish.yml
data/old/: 25_Portfolios_5x5.txt  25_Portfolios_5x5_1Factor.txt  25_Portfolios_5x5_MOM.txt  (+9 more)
handleData/: handleDataScript.py  step1GetData.py  step2CleanData.py  step3CombineData.py  step4ProcessData.py  step_3_combineData.py  step_4_processData.py  util.py
matlab_playground/: dgu_static_JagannathanMa.m  dgu_static_KanZhou1overN.m  dgu_static_SharpeRatios.m  dgu_static_buyhold.m  dgu_static_buyholdRet.m  dgu_static_minvconstrainNumerical.m  dgu_static_outSample.m  main.m
misc/: SPSectors Table
portfolio_performance/: README.md  __init__.py  pyproject.toml  requirements.txt  setup.py
portfolio_performance/portfolio_performance.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
portfolio_performance/portfolio_performance/src/: app.py
portfolio_performance/portfolio_performance/src/models/: minVarShortSellCon.py
portfolio_performance/src/: app.py
portfolio_performance/src/models/: bayesStein.py  bayesianDataModel.py
portfolio_performance/src/utils/: sharedOptions.py
portfoliotest/: setup.py
pre_processing/: clean_data.py  combine_data.py  get_data.py  handleDataScript.py  process.py  process_data.py  step_2_cleanData.py
src/: app.py  enum_policy.py  environment.py  main.py  model.py  modelGamma.py  modelNoGamma.py  models.py  system.py  system1.py  ui.py  util.py
(+86 files in other folders)
